apps/home-assistant/mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: mosquitto
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 1883
        runAsGroup: 1883
        fsGroup: 1883
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mosquitto
          image: docker.io/library/eclipse-mosquitto:2.0.22@sha256:212f89e1eaeb2c322d6441b64396e3346026674db8fa9c27beac293405c32b3c
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: mqtt
              containerPort: 1883
          livenessProbe:
            tcpSocket:
              port: mqtt
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: mqtt
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
              readOnly: true
            - name: auth
              mountPath: /mosquitto/auth
              readOnly: true
            - name: data
              mountPath: /mosquitto/data
          resources:
            limits:
              memory: 128Mi
              cpu: "0.5"
            requests:
              memory: 32Mi
              cpu: "10m"
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
        - name: auth
          secret:
            secretName: mqtt-credentials
            defaultMode: 0640
            items:
              - key: passwd
                path: passwd
        - name: data
          persistentVolumeClaim:
            claimName: mosquitto-data
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: mosquitto
spec:
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
